--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -34,11 +34,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><i class="fa fa-coffee" aria-hidden="true"></i> Election Predictor</a>
+          <a class="navbar-brand" href="/"><i class="fa fa-coffee" aria-hidden="true"></i> Election Predictor</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="/">Home</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
